--- a/Packs/CommonTypes/ReleaseNotes/2_8_14.md
+++ b/Packs/CommonTypes/ReleaseNotes/2_8_14.md
@@ -1,4 +1,7 @@
 #### Incident Fields
 - **Comments** - New field
-- **Dsts** - New field
-- **Srcs** - New field
+- **Dst's** - New field
+- **Src's** - New field
+- **Source IPs** - Added the **Splunk Generic** incident type to the Associated types.
+- **Destination IPs** - Added the **Splunk Generic** incident type to the Associated types.
+- **Events** - Added the **Splunk Generic** incident type to the Associated types.
