--- a/Packs/CommonTypes/ReleaseNotes/2_8_14.md
+++ b/Packs/CommonTypes/ReleaseNotes/2_8_14.md
@@ -5,3 +5,4 @@
 - **Source IPs** - Added the **Splunk Generic** incident type to the Associated types.
 - **Destination IPs** - Added the **Splunk Generic** incident type to the Associated types.
 - **Events** - Added the **Splunk Generic** incident type to the Associated types.
+- **Usernames** - Added the **Splunk Generic** incident type to the Associated types.
