Added incident type.

--- a/Packs/SplunkPy/ReleaseNotes/2_1_0.md
+++ b/Packs/SplunkPy/ReleaseNotes/2_1_0.md
@@ -2,6 +2,10 @@
 #### Incident Fields
 - **Notable Status**
 
+#### Incident Types
+##### Splunk Generic
+  - New incident type.
+
 #### Mappers
 ##### New: Splunk - Generic Incoming Mapper
 - New mapper for leveraging the Splunk ES integration capabilities for enrichment and mirroring (Available from Cortex XSOAR 6.0.0).
