--- a/Packs/Base/ReleaseNotes/1_7_29.md
+++ b/Packs/Base/ReleaseNotes/1_7_29.md
@@ -1,7 +1,13 @@
 
 #### Scripts
 ##### CommonServerPython
-- Added the **FeedRelatedIndicators** class which Implements an interface for "FeedRelatedIndicators" extensions.
-- Added the *feed_related_indicators* and the *malware_family* arguments to the **IP**, **URL**, **File** and **Domain** classes.
-- Added the *tags* argument to the **IP** and **URL** classes.
-- Added the *organization_name* and *organization_type* arguments to the **IP** class.
+- Added the *FeedRelatedIndicators* class which implements an interface for "FeedRelatedIndicators" extensions.
+- Added the *feed_related_indicators* and the *malware_family* arguments to the following classes:
+   - *IP*
+   - *URL*
+   - *File*
+   - *Domain*
+- Added the *tags* argument to the following classes:
+   - *IP* 
+   - *URL*
+- Added the *organization_name* and *organization_type* arguments to the *IP* class.
